[gd_scene load_steps=15 format=3 uid="uid://db5fatnj0uwms"]

[ext_resource type="Script" path="res://player/player.gd" id="1_iitf2"]
[ext_resource type="Texture2D" uid="uid://b010odvgbpiye" path="res://player/player.png" id="2_22u6h"]
[ext_resource type="PackedScene" uid="uid://dnwpwikn763lo" path="res://weapon/pistol.tscn" id="3_htkx3"]
[ext_resource type="PackedScene" uid="uid://c8gxu8yayj15w" path="res://weapon/melee_weapon.tscn" id="3_mmdbs"]
[ext_resource type="PackedScene" uid="uid://u2vho6i5c0nc" path="res://weapon/machine_gun.tscn" id="4_yarha"]
[ext_resource type="PackedScene" uid="uid://bit2cxxu4xi8o" path="res://weapon/burst_rifle.tscn" id="5_fw7d2"]
[ext_resource type="PackedScene" uid="uid://blnmaye6htmo6" path="res://weapon/shotgun.tscn" id="6_d3724"]
[ext_resource type="PackedScene" uid="uid://32a0rer8h7vt" path="res://weapon/sniper_rifle.tscn" id="7_uxrnu"]
[ext_resource type="PackedScene" uid="uid://c0pv1j1w1ak38" path="res://ui/dot.tscn" id="9_d85pt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_my8fn"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tldfe"]
radius = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f81s"]
bg_color = Color(0, 0, 0, 0.266667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uj0h"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wqqao"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 2
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_iitf2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_my8fn")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_tldfe")

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadBar" type="ProgressBar" parent="."]
visible = false
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
theme_override_styles/background = SubResource("StyleBoxFlat_5f81s")
theme_override_styles/fill = SubResource("StyleBoxFlat_6uj0h")
show_percentage = false

[node name="ReloadLabel" type="Label" parent="."]
visible = false
offset_left = -16.0
offset_top = -24.0
offset_right = 17.0
offset_bottom = -11.0
text = "Reload"
label_settings = SubResource("LabelSettings_wqqao")

[node name="Flip" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Flip"]
texture = ExtResource("2_22u6h")

[node name="Hand" type="Node2D" parent="Flip"]
position = Vector2(8, 0)

[node name="MeleeWeapon" parent="Flip/Hand" instance=ExtResource("3_mmdbs")]

[node name="Pistol" parent="Flip/Hand" instance=ExtResource("3_htkx3")]
visible = false

[node name="Machine Gun" parent="Flip/Hand" instance=ExtResource("4_yarha")]
visible = false

[node name="Burst Rifle" parent="Flip/Hand" instance=ExtResource("5_fw7d2")]
visible = false

[node name="Shotgun" parent="Flip/Hand" instance=ExtResource("6_d3724")]
visible = false

[node name="Sniper Rifle" parent="Flip/Hand" instance=ExtResource("7_uxrnu")]
visible = false

[node name="Hitbox" parent="." instance=ExtResource("9_d85pt")]
visible = false
size = 3.0
color = Color(1, 1, 1, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
